# zkwire

./: .gitignore  Architecture.md  CONTRIBUTING.md  Cargo.toml  README.md
examples/: broken_fibonacci.rs
fixtures/: demo_failure.txt
src/: hex.rs  lib.rs  main.rs  parser.rs  report.rs  reporter.rs  tracker.rs
