[package]
name = "zkwire"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Cargo-style diagnostics and source-origin tracking for Halo2 MockProver failures"
license = "MIT"
repository = "https://github.com/merelinmrelin-web/zkwire"
readme = "README.md"
keywords = ["halo2", "zk", "debugging", "cli", "diagnostics"]
categories = ["command-line-utilities", "development-tools::debugging"]

[lib]
name = "zkwire"
path = "src/lib.rs"

[[bin]]
name = "zkwire"
path = "src/main.rs"

[dependencies]
halo2_proofs = "0.3.0"
group = "0.13"
regex = "1"
colored = "2"
num-bigint = "0.4"
lazy_static = "1"
ff = "0.13"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
